<resources>
    <string name="app_name">Hotel booking</string>
    <string name="hint_mobile">9876543210</string>
    <string name="login">Login</string>
    <string name="Hiuser">Hi User !</string>
    <string name="tell_us">Please enter your mobile number to get started</string>
    <string name="moblie_required_error">Please enter valid mobile number</string>
    <string name="dialog_ok">OK</string>
    <string name="succeess">Success!!!</string>
    <string name="error_alert_text">Alert !!!</string>
    <string name="verify">Verify</string>
    <string name="otp_screen_hint_text">"Please enter OTP sent to "</string>
    <string name="otp_required_error">OTP is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="no_active_booking_found">No active bookings found</string>
    <string name="payment">Payments</string>
    <string name="no_transaction_found">No transaction found</string>
    <string name="pay_now">Pay Now</string>
    <string name="details">Details</string>
    <string name="amount_to_be_paid">Amount Due</string>
    <string name="razor_pay">Razorpay</string>
    <string name="razor_pay_support">Debit card , Credit card , Netbanking , UPI</string>
    <string name="wiat_payment">Please wait while your payment is being processed</string>
    <string name="razor_pay_service_charge">Service charge from razorpay (2%)</string>
    <string name="gst_charge">Gst charge (18% on service charge)</string>
    <string name="please_wait_payment_details">Please wait while system is fetching payment details</string>
    <string name="my_fod">My FOD</string>
    <string name="house_keeping">Housekeeping</string>
    <string name="complaints">Complaints</string>
    <string name="out_standing">Outstanding amount till now:</string>
    <string name="amount">Rs.10000</string>
    <string name="contact_fod_help">Contact Emergency FOD Helpline</string>
    <string name="payment_for">Payment</string>
    <string name="house_keeping_schedule">House keeping Schedule</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time slot</string>
    <string name="error_date_not_selected">"Please select date "</string>
    <string name="error_time_slot_free">is not free</string>
    <string name="bill">Bill</string>
    <string name="total">Total</string>
    <string name="rs_100">Rs.100</string>
    <string name="charges_internet">Internet handling charge</string>
    <string name="error_time_not_selected">Please select time slot</string>
    <string name="RZR_PAY_TOKEN">rzp_test_WUdRvYwRyXmnJs</string>
    <string name="my_booking">My Bookings</string>
    <string name="status">Status</string>
    <string name="to">To</string>
    <string name="view_payment">View payments</string>
    <string name="complaints_form">Complaints Form</string>
    <string name="select_category">Select category</string>
    <string name="select_sub_category">Select Sub category</string>
    <string name="remarks">Remarks</string>
    <string name="error_category_required">Please select category first</string>
    <string name="error_sub_category_required">Please select sub category</string>
    <string name="payment_history">Payment history</string>
    <string name="recent_payment">Recents</string>
    <string name="Paid_for_rent">Paid for Rent</string>
    <string name="Paid_for_elec">Paid for electricity</string>
    <string name="wait">Pleas wait while fetching the details</string>
    <string name="your_profile">Profile</string>
    <string name="complaints_history">Complaints history</string>
    <string name="house_keeping_history">House keeping history</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_condition">Terms and condition</string>
    <string name="logout">Logout</string>
    <string name="fod_living">FOD Living</string>
    <string name="you_live_we_care">#You live we care</string>
    <string name="search_near_by">Search near by</string>
    <string name="enter_location">Search pocket friendly FOD near You</string>
    <string name="location">Enter location</string>
    <string name="cities">Cities</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="book_now">"Book Now "</string>
    <string name="visit">visit</string>
    <string name="here_api_key">dK5pSm1P21jSe73-Pm2s242ZMJXXLNpj3hRn4vU6AAo</string>
    <string name="near_by">Near by</string>
    <string name="checkin">Check in</string>
    <string name="otp_screen_hint">Please enter six digit OTP sent to your mobile number</string>
</resources>
