<?xml version="1.0" encoding="utf-8"?><!--
  ~ Hackdroid Tech Author raza11409652 github www.github.com/raza11409652 Copyright (c)  2020
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HoseKeepingSchedule">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/parent_padding"
        android:text="@string/payment_for"
        android:textColor="@color/text_color"
        android:textSize="@dimen/size_24"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar"></TextView>

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_18"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="property name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/size_20"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Room number"
            android:textColor="@color/text_color"
            android:textSize="@dimen/size_20"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:text="@string/house_keeping_schedule"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:orientation="vertical"
        android:padding="@dimen/padding_18"
        app:layout_constraintTop_toBottomOf="@id/row_1">

        <TextView
            android:id="@+id/select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/click_text"
            android:drawableEnd="@drawable/calander"
            android:padding="@dimen/parent_padding"
            android:text="@string/select_date"
            android:textColor="@color/text_color"
            android:textSize="@dimen/size_20"></TextView>

        <TextView
            android:id="@+id/select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/click_text"
            android:drawableEnd="@drawable/calander"
            android:padding="@dimen/parent_padding"
            android:text="@string/select_time"
            android:textColor="@color/text_color"
            android:textSize="@dimen/size_20"></TextView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>